tests/src/frontend/typechecking/invalid/generic_return.sk
class Foo(x: Int)

fun foo<T: Foo>(): T {
  Foo(42)
}
